--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </li>
                 <li class="nav-item"><a class="nav-link" href="#education" title="Education"><span class="menu-title">Education</span></a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="#portfolio" title="Portfolio"><span class="menu-title">Portfolio</span></a>
+                <li class="nav-item"><a class="nav-link" href="#repositories" title="Repositories"><span class="menu-title">Repositories</span></a>
                 </li>
                 <!--
                 <li class="nav-item"><a class="nav-link" href="#references" title="References"><span class="menu-title">References</span></a>
@@ -98,7 +98,8 @@
       <div class="row">
         <div class="col-md-6">
           <h2 class="h2 fw-light mb-4">About Me</h2>
-          <p>Hello! I’m Aditya Shirodkar. I am an adaptable data scientist, having interned in three diverse sectors. I'm proficient with Python, R, and SQL, and am due to graduate with distinction at an MSc Data Science from Lancaster University in September 2021. I am a quick learner and a team worker, and have the ability to put up a strong presentation.</p>
+          <p>Hello! I’m Aditya Shirodkar. I am a data scientist from a multidisciplinary background, having interned in three diverse sectors.</p>
+          <p>I'm proficient with Python, R, and SQL, and am due to graduate with distinction at an MSc Data Science from Lancaster University in September 2021.</p>
         </div>
         <div class="col-md-5 offset-lg-1">
           <div class="row mt-2">
@@ -178,17 +179,17 @@
           </div>
         </div>
         <div class="col-md-6">
-          <div class="mb-3"><span class="fw-bolder">Data Mining</span>
+          <div class="mb-3"><span class="fw-bolder">Machine Learning - pandas, scikit-learn, PyTorch, TensorFlow</span>
             <div class="progress my-2 rounded" style="height: 20px">
               <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Skilled</div>
             </div>
           </div>
-          <div class="mb-3"><span class="fw-bolder">Machine Learning</span>
+          <div class="mb-3"><span class="fw-bolder">Data Visualisation - matplotlib, ggplot2</span>
             <div class="progress my-2 rounded" style="height: 20px">
               <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Skilled</div>
             </div>
           </div>
-          <div class="mb-3"><span class="fw-bolder">Data Visualisation - matplotlib, ggplot2</span>
+          <div class="mb-3"><span class="fw-bolder">Git</span>
             <div class="progress my-2 rounded" style="height: 20px">
               <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Skilled</div>
             </div>
@@ -299,7 +300,16 @@
                 Modules: Statistical modelling and inference, basic and applied data mining, distributed AI, building big data systems, programming.
               </li>
               <li>
-                R, Python, SQL, Hadoop
+                AI project: Solvers for the infinitely-many armed bandit problem.
+              </li>
+              <li>
+                Project with GB Group: pricing of properties in England and Wales.
+              </li>
+              <li>
+                Built a DFS with multiple virtual machines to handle large volumes of Google server data.
+              </li>
+              <li>
+                Ongoing placement/dissertation project at NHS University Hospitals of Morecambe Bay.
               </li>
             </div>
             </div>
@@ -318,9 +328,6 @@
               <li>
                 Dissertation: Microencapsulation in fabrics and thermal analysis of a substrate embedded with two different micrencapsulated phase change materials.
               </li>
-              <li>
-                R, MATLAB, various energy and building design software.
-              </li>
             </div>
           </div>
         </div>
@@ -338,10 +345,7 @@
                 Minor in Philosophy, Economics, and Politics.
               </li>
               <li>
-                Two placement/dissertation projects: at HDFC Bank and the National Institute of Wind Energy.
-              </li>
-              <li>
-                C++, R, Python, MATLAB, various mech. engg. modelling and simulation software.
+                Two placement/dissertation projects: at HDFC Bank and at the National Institute of Wind Energy.
               </li>
             </div>
           </div>
@@ -350,7 +354,7 @@
     </div>
   </div>
 
-  <div class="shadow-1-strong bg-white my-5 p-5 d-print-none" id="portfolio">
+  <div class="shadow-1-strong bg-white my-5 p-5 d-print-none" id="repositories">
     <div class="portfolio-section">
       <h2 class="h2 fw-light mb-4">Repositories</h2>
       <div class="row g-0">
@@ -431,25 +435,24 @@
             <div class="h6"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> +44 07746807363</div>
             <div class="h6"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> adityashirodkar2020@gmail.com</div>
           </div>
-          <div class="mt-5 d-print-none"><form action="https://formspree.io/adityashirodkar2020@gmail.com"
-            method="POST">
+          <div class="mt-5 d-print-none"><form action="https://formspree.io/f/xbjqavwy" method="POST">
           <div class="form-outline mb-4">
-            <input type="text" id="name" class="form-control" required/>
+            <input type="text" id="name" class="form-control" name="Name" required/>
             <label class="form-label" for="name">Name</label>
           </div>
           <div class="form-outline mb-4">
-            <input type="email" id="email" class="form-control" required/>
+            <input type="email" id="email" class="form-control" name="From" required/>
             <label class="form-label" for="email">Email address</label>
           </div>
           <div class="form-outline mb-4">
-            <textarea class="form-control" style="resize: none;" id="message" rows="4" required></textarea>
+            <textarea class="form-control" style="resize: none;" id="Message" name="message" rows="4" required></textarea>
             <label class="form-label" for="message">Message</label>
           </div>
           <button class="btn btn-info btn-block mb-4" type="submit">Send</button>
           </form>
           </div>
         </div>
-        <div class="col-md-7 d-print-none" data-aos="zoom-in" data-aos-delay="100"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1997.6457508457077!2d-2.7894128515677292!3d54.003862473320225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTTCsDAwJzE0LjciTiAywrA0NycxMi43Ilc!5e0!3m2!1sen!2suk!4v1627156165010!5m2!1sen!2suk" width="800" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+        <div class="col-md-7 d-print-none" data-aos="zoom-in" data-aos-delay="100"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7719.353505782656!2d-2.7943940297395304!3d54.00792013529738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTTCsDAwJzE2LjEiTiAywrA0NycxNC4zIlc!5e0!3m2!1sen!2suk!4v1627168410357!5m2!1sen!2suk" width="750" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
       </div>
     </div>
   </div>
