--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   </ul>
                 </nav>
               </div>
-              <div class="d-print-none"><a href="https://aditya-shirodkar.github.io/Resume_AdityaShirodkar.pdf" target="_blank"><a class="btn btn-outline-light btn-lg shadow-sm mt-1 me-3" data-aos="fade-right" data-aos-delay="700">Download CV</a></a><a class="btn btn-info btn-lg shadow-sm mt-1" href="#contact" data-aos="fade-left" data-aos-delay="700">Hire Me</a></div>
+              <div class="d-print-none"><a href="https://aditya-shirodkar.github.io/Resume_AdityaShirodkar.pdf" target="_blank" type="application/pdf"><a class="btn btn-outline-light btn-lg shadow-sm mt-1 me-3" data-aos="fade-right" data-aos-delay="700">Download CV</a></a><a class="btn btn-info btn-lg shadow-sm mt-1" href="#contact" data-aos="fade-left" data-aos-delay="700">Hire Me</a></div>
             </div>
           </div>
         </div>
