--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
       <div class="row">
         <div class="col-md-6">
           <h2 class="h2 fw-light mb-4">About Me</h2>
-          <p>Hello! I’m Aditya Shirodkar. I am a data scientist from a multidisciplinary background, having interned in three diverse sectors.</p>
-          <p>I'm proficient with Python, R, and SQL, and am due to graduate with distinction at an MSc Data Science from Lancaster University in September 2021.</p>
+          <p>Hello! I’m Aditya Shirodkar. I am a data scientist and large language model enthusiast, working primarily in Python.</p>
         </div>
         <div class="col-md-5 offset-lg-1">
           <div class="row mt-2">
