--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="row">
         <div class="col-md-6">
           <h2 class="h2 fw-light mb-4">About Me</h2>
-          <p>Hello! I’m Aditya Shirodkar. I am a data scientist and large language model enthusiast, working primarily in Python.</p>
+          <p>Hello! I’m Aditya Shirodkar, a data scientist who is currently learning about large language models.</p>
         </div>
         <div class="col-md-5 offset-lg-1">
           <div class="row mt-2">
