--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <div class="pb-2 fw-bolder"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Phone</div>
             </div>
             <div class="col-sm-7">
-              <div class="pb-2">+44 07746807363</div>
+              <div class="pb-2">+91 8806460040</div>
             </div>
             <div class="col-sm-5">
               <div class="pb-2 fw-bolder"><i class="fas fa-map-marker-alt pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Address</div>
@@ -156,46 +156,46 @@
               <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 85%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Skilled</div>
             </div>
           </div>
-          <div class="mb-3"><span class="fw-bolder">R</span>
+          <div class="mb-3"><span class="fw-bolder">Classic data science: pandas, scikit-learn, etc.</span>
             <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Skilled</div>
+              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Skilled</div>
             </div>
           </div>
-          <div class="mb-3"><span class="fw-bolder">SQL</span>
+          <div class="mb-3"><span class="fw-bolder">Data visualisation: matplotlib, seaborn, ggplot2 (R)</span>
             <div class="progress my-2 rounded" style="height: 20px">
               <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Skilled</div>
             </div>
           </div>
-          <div class="mb-3"><span class="fw-bolder">Apache Hadoop</span>
+          <div class="mb-3"><span class="fw-bolder">Deep learning: PyTorch</span>
             <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 60%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Novice</div>
+              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Novice</div>
             </div>
           </div>
-          <div class="mb-3"><span class="fw-bolder">HTML, CSS</span>
+          <div class="mb-3"><span class="fw-bolder">R</span>
             <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 50%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Novice</div>
+              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 75%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Skilled</div>
             </div>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="mb-3"><span class="fw-bolder">Machine Learning - pandas, scikit-learn, PyTorch, TensorFlow</span>
+          <div class="mb-3"><span class="fw-bolder">TypeScript (node.js)</span>
             <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Skilled</div>
+              <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 30%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Novice</div>
             </div>
           </div>
-          <div class="mb-3"><span class="fw-bolder">Data Visualisation - matplotlib, ggplot2</span>
+          <div class="mb-3"><span class="fw-bolder">Docker</span>
             <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Skilled</div>
+              <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 30%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Skilled</div>
             </div>
           </div>
           <div class="mb-3"><span class="fw-bolder">Git</span>
             <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Skilled</div>
+              <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Skilled</div>
             </div>
           </div>
-          <div class="mb-3"><span class="fw-bolder">Jupyter Notes, Google Colab</span>
+          <div class="mb-3"><span class="fw-bolder">AWS Lambda, EC2, S3, etc.</span>
             <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Skilled</div>
+              <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 40%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Skilled</div>
             </div>
           </div>
           <div class="mb-3"><span class="fw-bolder">RMarkdown, LaTeX</span>
@@ -213,34 +213,40 @@
       <div class="timeline">
         <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="0">
           <div class="timeline-head px-4 pt-3">
-            <div class="h5">Data Analyst Intern <span class="text-muted h6">at NHS University Hospitals of Morecambe Bay</span></div>
+            <div class="h5">Junior Data Engineer <span class="text-muted h6">at Culture Shift</span></div>
           </div>
           <div class="timeline-body px-4 pb-4">
-            <div class="text-muted text-small mb-3">Lancaster, UK<br>
-            May, 2021 - Present</div>
+            <div class="text-muted text-small mb-3">Manchester, UK<br>
+            Sep. 2021 - June 2023</div>
             <div>
               <li>
-                Predicting mortality rates for in-patients, using historical medical data.
+                Culture Shift is a SaaS startup whose main product is an incident reporting app with an in-built analytics engine. As the only data person at Culture Shift, I performed both data engineering and analysis tasks.
               </li>
               <li>
-                Additional profile on the impact of Covid-19 and suggestions for future improvements.
+                Built and maintained several ETL pipelines synchronising the product (single-page React app) and its database (Postgres) with various vendor tools like Mixpanel, HubSpot, Google Drive, etc. These pipelines ran nightly, or as custom runs triggered by an in-product self-service system. Subjects of analysis included client site performance and product feature usage, as well as Culture Shift’s own KPIs. Analysis results were output as plots (images) stored to Google Drive, Google Spreadsheets, Mixpanel Dashboards, interactive Google Colab notebooks, HubSpot properties/reports, and Slack-based alerts for anomaly detection.
               </li>
               <li>
-                Ongoing placement project with Lancaster University.
+                ML project: used techniques to compare client forms and thereby estimate the optimal form structure to attain higher form completion rates.
+              </li>
+              <li>
+                Test-driven development, comprehensive dev. database, type-annotation and linter use, detailed code review, Agile workflow.
               </li>
             </div>
           </div>
         </div>
         <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="200">
           <div class="timeline-head px-4 pt-3">
-            <div class="h5">Data Scientist Intern <span class="text-muted h6">at the National Institute of Wind Energy</span></div>
+            <div class="h5">Wind Resource Analyst Intern <span class="text-muted h6">at the National Institute of Wind Energy</span></div>
           </div>
           <div class="timeline-body px-4 pb-4">
             <div class="text-muted text-small mb-3">Chennai, India<br>
             July, 2017 - December 2017</div>
             <div>
               <li>
-                Identified suitable sites for wind farms using weather and GIS data in the state of Tamil Nadu, as part of the Wind Resource Assessment division. Placement project with the Birla Institute of Technology and Science (Grade - A).
+                “Practice school” project with BITS Goa. Part of the Wind Resource Assessment team at NIWE.
+              </li>
+              <li>
+                Identified potential sites for wind farms using GIS data in the state of Tamil Nadu, meeting government energy policy criteria and NIWE client requirements. Outputs presented as GIS maps; also simulated windflow at said sites.
               </li>
               <li>
                 Modelled wind flow on an onshore turbine.
@@ -260,16 +266,13 @@
             Jan, 2017 - June, 2017</div>
             <div>
               <li>
-                Implemented new parameters to account for the urbanity of business loan customers for better cross-selling in rural areas with fewer spending pressures
+                “Practice school” project with BITS Goa. Part of the X-sell team of the Credit Risk Analytics division at HDFC Bank.
               </li>
               <li>
-                Built credit risk models to find customer risk of default following CRA ratings and Basel Accords.
+                Introduced parameters to account for the urbanity of business loan customers, for better X-selling in rural areas with fewer spending pressures. This improved the accuracy of existing models to calculate the risk of default for business loan customers.
               </li>
               <li>
-                Data mining from textual transaction detail fields to generate useful labels.
-              </li>
-              <li>
-                Placement project with the Birla Institute of Technology and Science (Grade - A).
+                Mined data from textual point-of-sale transaction details to create labels for company use.
               </li>
             </div>
             </div>
@@ -290,25 +293,25 @@
             <div class="text-muted text-small mb-3">2020 - 2021</div>
             <div>
               <li>
-                Expected distinction (80% as of July 2021).
+                Distinction
               </li>
               <li>
                 Specialism in Computing.
               </li>
               <li>
-                Modules: Statistical modelling and inference, basic and applied data mining, distributed AI, building big data systems, programming.
+                AI Project: “Solvers for the infinitely-many armed bandit problem.” Expanded upon eleven existing algorithms for the traditional finitely-armed case.
               </li>
               <li>
-                AI project: Solvers for the infinitely-many armed bandit problem.
+                NLP project: Categorised words and sentences as English, Czech, or Igbo with 99.9%+ accuracy.
               </li>
               <li>
-                Project with GB Group: pricing of properties in England and Wales.
+                Estimated property prices in England and Wales for GBG using geographical data. Achieved street-level confidence.
               </li>
               <li>
-                Built a DFS with multiple virtual machines to handle large volumes of Google server data.
+                Created a distributed file sharing network (Hadoop-based) to handle billions of rows of Google server data in real time using on-campus Linux terminals.
               </li>
               <li>
-                Ongoing placement/dissertation project at NHS University Hospitals of Morecambe Bay.
+                Thesis project: “Predicting in-patient mortality” with NHS UHMB. In-patient mortality was to be predicted, generalisable for trust data on a per-patient level. Utilised undersampling techniques to offset the size (millions of rows) and highly imbalanced nature of the dataset; achieved high recall results at the cost of precision, considered acceptable as one is "better safe than sorry" in the medical sector.
               </li>
             </div>
             </div>
@@ -322,10 +325,13 @@
             <div class="text-muted text-small mb-3">2018 - 2020</div>
             <div>
               <li>
-                Distinction.
+                Distinction
               </li>
               <li>
-                Dissertation: Microencapsulation in fabrics and thermal analysis of a substrate embedded with two different micrencapsulated phase change materials.
+                Modelled sizing, power flow, penetration, reliability, and LCOE of a hybrid renewable energy system for a term project.
+              </li>
+              <li>
+                Dissertation: “Thermal analysis of a substrate embedded with two different microencapsulated phase change materials.” Utilised Salome-meca/Code_Aster (Python-based simulation software/FEA solver) to show that embedding two types of microencapsulated PCMs of different latent heats into a substrate can provide better thermal storage properties than using either one when distributed in the right proportion.
               </li>
             </div>
           </div>
@@ -338,13 +344,10 @@
             <div class="text-muted text-small mb-3">2012 - 2017</div>
             <div>
               <li>
-                First class with honours.
+                First class with honours
               </li>
               <li>
-                Minor in Philosophy, Economics, and Politics.
-              </li>
-              <li>
-                Two placement/dissertation projects: at HDFC Bank and at the National Institute of Wind Energy.
+                Minor in Philosophy, Economics, and Politics
               </li>
             </div>
           </div>
