--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="row">
         <div class="col-md-6">
           <h2 class="h2 fw-light mb-4">About Me</h2>
-          <p>Hello! I’m Aditya Shirodkar, a data scientist who is currently learning about large language models.</p>
+          <p>Hello! I’m Aditya Shirodkar, a data scientist who is currently learning and implementing large language models.</p>
         </div>
         <div class="col-md-5 offset-lg-1">
           <div class="row mt-2">
@@ -139,68 +139,7 @@
               <div class="pb-2 fw-bolder"><i class="fas fa-map-marker-alt pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Address</div>
             </div>
             <div class="col-sm-7">
-              <div class="pb-2">Graduate College, Lancaster University, UK</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="shadow-1-strong bg-white my-5 p-5" id="skills">
-    <div class="skills-section">
-      <h2 class="h2 fw-light mb-4">Professional Skills</h2>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="mb-3"><span class="fw-bolder">Python</span>
-            <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 85%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Skilled</div>
-            </div>
-          </div>
-          <div class="mb-3"><span class="fw-bolder">Classic data science: pandas, scikit-learn, etc.</span>
-            <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Skilled</div>
-            </div>
-          </div>
-          <div class="mb-3"><span class="fw-bolder">Data visualisation: matplotlib, seaborn, ggplot2 (R)</span>
-            <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Skilled</div>
-            </div>
-          </div>
-          <div class="mb-3"><span class="fw-bolder">Deep learning: PyTorch</span>
-            <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Novice</div>
-            </div>
-          </div>
-          <div class="mb-3"><span class="fw-bolder">R</span>
-            <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 75%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Skilled</div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="mb-3"><span class="fw-bolder">TypeScript (node.js)</span>
-            <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 30%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Novice</div>
-            </div>
-          </div>
-          <div class="mb-3"><span class="fw-bolder">Docker</span>
-            <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 30%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Skilled</div>
-            </div>
-          </div>
-          <div class="mb-3"><span class="fw-bolder">Git</span>
-            <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Skilled</div>
-            </div>
-          </div>
-          <div class="mb-3"><span class="fw-bolder">AWS Lambda, EC2, S3, etc.</span>
-            <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 40%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Skilled</div>
-            </div>
-          </div>
-          <div class="mb-3"><span class="fw-bolder">RMarkdown, LaTeX</span>
-            <div class="progress my-2 rounded" style="height: 20px">
-              <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Skilled</div>
+              <div class="pb-2">Goa, India</div>
             </div>
           </div>
         </div>
@@ -249,10 +188,7 @@
                 Identified potential sites for wind farms using GIS data in the state of Tamil Nadu, meeting government energy policy criteria and NIWE client requirements. Outputs presented as GIS maps; also simulated windflow at said sites.
               </li>
               <li>
-                Modelled wind flow on an onshore turbine.
-              </li>
-              <li>
-                Placement project with the Birla Institute of Technology and Science (Grade - A).
+                Pipeline: ArcGIS -> AutoCAD -> Solidworks -> OpenFOAM
               </li>
             </div>
           </div>
@@ -349,6 +285,76 @@
               <li>
                 Minor in Philosophy, Economics, and Politics
               </li>
+              <li>
+                "Celestia" astronomy club: organised Storming Aurora, an astrophysics conference (2012).
+              </li>
+              <li>
+                "Searock" semi-professional band competition organiser (2012 - 2016).
+              </li>
+              <li>
+                Debate and quiz enthusiast with the Literary and Debating Club (2012 - 2016).
+              </li>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+      <div class="shadow-1-strong bg-white my-5 p-5" id="skills">
+    <div class="skills-section">
+      <h2 class="h2 fw-light mb-4">Professional Skills</h2>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="mb-3"><span class="fw-bolder">Python</span>
+            <div class="progress my-2 rounded" style="height: 20px">
+              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 85%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Experienced</div>
+            </div>
+          </div>
+          <div class="mb-3"><span class="fw-bolder">Classic data science: pandas, scikit-learn, etc.</span>
+            <div class="progress my-2 rounded" style="height: 20px">
+              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Experienced</div>
+            </div>
+          </div>
+          <div class="mb-3"><span class="fw-bolder">Data visualisation: matplotlib, seaborn, ggplot2 (R)</span>
+            <div class="progress my-2 rounded" style="height: 20px">
+              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Experienced</div>
+            </div>
+          </div>
+          <div class="mb-3"><span class="fw-bolder">Deep learning: PyTorch</span>
+            <div class="progress my-2 rounded" style="height: 20px">
+              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Experienced</div>
+            </div>
+          </div>
+          <div class="mb-3"><span class="fw-bolder">R</span>
+            <div class="progress my-2 rounded" style="height: 20px">
+              <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 75%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Experienced</div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="mb-3"><span class="fw-bolder">TypeScript (node.js)</span>
+            <div class="progress my-2 rounded" style="height: 20px">
+              <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 30%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Novice</div>
+            </div>
+          </div>
+          <div class="mb-3"><span class="fw-bolder">Docker</span>
+            <div class="progress my-2 rounded" style="height: 20px">
+              <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 30%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Novice</div>
+            </div>
+          </div>
+          <div class="mb-3"><span class="fw-bolder">Git</span>
+            <div class="progress my-2 rounded" style="height: 20px">
+              <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Experienced</div>
+            </div>
+          </div>
+          <div class="mb-3"><span class="fw-bolder">AWS Lambda, EC2, S3, etc.</span>
+            <div class="progress my-2 rounded" style="height: 20px">
+              <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 40%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Novice</div>
+            </div>
+          </div>
+          <div class="mb-3"><span class="fw-bolder">RMarkdown, LaTeX</span>
+            <div class="progress my-2 rounded" style="height: 20px">
+              <div class="progress-bar bg-secondary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Experienced</div>
             </div>
           </div>
         </div>
