--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
       <div class="row mb-4">
         <div class="col-md-5" data-aos="fade-left" data-aos-delay="200">
           <div class="mt-1">
-            <div class="h6"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> +44 07746807363</div>
+            <div class="h6"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> +91 8806460040</div>
             <div class="h6"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> adityashirodkar2020@gmail.com</div>
           </div>
           <div class="mt-5 d-print-none"><form action="https://formspree.io/f/xbjqavwy" method="POST">
@@ -460,7 +460,7 @@
           </form>
           </div>
         </div>
-        <div class="col-md-7 d-print-none" data-aos="zoom-in" data-aos-delay="100"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7719.353505782656!2d-2.7943940297395304!3d54.00792013529738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTTCsDAwJzE2LjEiTiAywrA0NycxNC4zIlc!5e0!3m2!1sen!2suk!4v1627168410357!5m2!1sen!2suk" width="650" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+        <div class="col-md-7 d-print-none" data-aos="zoom-in" data-aos-delay="100"><iframe src="https://www.google.com/maps/embed?pb=!3m1!4b1!4m6!3m5!1s0x3bbfba106336b741:0xeaf887ff62f34092!8m2!3d15.2993265!4d74.123996!16zL20vMDFjMW5t" width="650" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
       </div>
     </div>
   </div>
