--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
           </form>
           </div>
         </div>
-        <div class="col-md-7 d-print-none" data-aos="zoom-in" data-aos-delay="100"><iframe src="https://www.google.com/maps/embed?pb=!3m1!4b1!4m6!3m5!1s0x3bbfba106336b741:0xeaf887ff62f34092!8m2!3d15.2993265!4d74.123996!16zL20vMDFjMW5t" width="650" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+        <div class="col-md-7 d-print-none" data-aos="zoom-in" data-aos-delay="100"><iframe src="https://www.google.com/maps/embed/v1/place?q=Goa,+India&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8" width="650" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
       </div>
     </div>
   </div>
