--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="row">
         <div class="col-md-6">
           <h2 class="h2 fw-light mb-4">About Me</h2>
-          <p>Hello! I’m Aditya Shirodkar, a data scientist who is currently learning and implementing large language models.</p>
+          <p>Hello! I’m Aditya Shirodkar, a data scientist with an interest in generative AI.</p>
         </div>
         <div class="col-md-5 offset-lg-1">
           <div class="row mt-2">
@@ -152,7 +152,7 @@
       <div class="timeline">
         <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="0">
           <div class="timeline-head px-4 pt-3">
-            <div class="h5">Junior Data Engineer <span class="text-muted h6">at Culture Shift</span></div>
+            <div class="h5">Data Engineer/Scientist <span class="text-muted h6">at Culture Shift</span></div>
           </div>
           <div class="timeline-body px-4 pb-4">
             <div class="text-muted text-small mb-3">Manchester, UK<br>
