--- a/index.html
+++ b/index.html
@@ -367,15 +367,18 @@
     <div class="portfolio-section">
       <h2 class="h2 fw-light mb-4">Repositories</h2>
       <div class="row g-0">
-        <div class="col-md-6"><a href="https://github.com/aditya-shirodkar/python_projects" target="_blank"><img class="img-fluid" src="images/machine-learning-1.jpg" width="800" height="500"/></a></div>
+        <div class="col-md-6"><a href="https://github.com/aditya-shirodkar/deep-learning" target="_blank"><img class="img-fluid" src="images/machine-learning-1.jpg" width="800" height="500"/></a></div>
         <div class="col-md-6 d-flex align-items-center" data-aos="fade-left" data-aos-delay="100">
           <div class="m-4 mt-md-2">
-            <p class="text-teal text-small">Python / Machine Learning</p>
+            <p class="text-teal text-small">Deep learning</p>
             <h3>Useful ML Tools</h3>
-            <p class="text-muted">Helpful implementations of basic machine learning components: dendrogram, SVM, naive Bayes, kNN, silhouette plotter, PCA, plotter for classification, Gini calculator, decision tree, logistic regression, priority queue, NLP for language classification.</p>
+            <p class="text-muted">Helpful implementations of basic neural networks, building up towards generative AI.</p>
           </div>
         </div>
       </div>
+      <!--
+      : dendrogram, SVM, naive Bayes, kNN, silhouette plotter, PCA, plotter for classification, Gini calculator, decision tree, logistic regression, priority queue, NLP for language classification
+      -->
 
     <!--
       <div class="row g-0 portfolio-reverse">
