--- a/index.html
+++ b/index.html
@@ -370,8 +370,8 @@
         <div class="col-md-6"><a href="https://github.com/aditya-shirodkar/deep-learning" target="_blank"><img class="img-fluid" src="images/machine-learning-1.jpg" width="800" height="500"/></a></div>
         <div class="col-md-6 d-flex align-items-center" data-aos="fade-left" data-aos-delay="100">
           <div class="m-4 mt-md-2">
-            <p class="text-teal text-small">Deep learning</p>
-            <h3>Useful ML Tools</h3>
+            <p class="text-teal text-small">Python > Deep learning</p>
+            <h3>PyTorch ML tools</h3>
             <p class="text-muted">Helpful implementations of basic neural networks, building up towards generative AI.</p>
           </div>
         </div>
