--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="row">
         <div class="col-md-6">
           <h2 class="h2 fw-light mb-4">About Me</h2>
-          <p>Hello! I’m Aditya Shirodkar, a data scientist with an interest in generative AI.</p>
+          <p>Hello! I’m Aditya Shirodkar, an xperienced data engineer with a strong background in building and maintaining ETL pipelines, data analytics, and machine learning. I also have an interest in generative AI and its applications.</p>
         </div>
         <div class="col-md-5 offset-lg-1">
           <div class="row mt-2">
@@ -139,7 +139,7 @@
               <div class="pb-2 fw-bolder"><i class="fas fa-map-marker-alt pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Address</div>
             </div>
             <div class="col-sm-7">
-              <div class="pb-2">Goa, India</div>
+              <div class="pb-2">Bangalore, India</div>
             </div>
           </div>
         </div>
@@ -152,23 +152,38 @@
       <div class="timeline">
         <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="0">
           <div class="timeline-head px-4 pt-3">
-            <div class="h5">Data Engineer/Scientist <span class="text-muted h6">at Culture Shift</span></div>
+            <div class="h5">Data Engineer <span class="text-muted h6">at Culture Shift</span></div>
           </div>
           <div class="timeline-body px-4 pb-4">
             <div class="text-muted text-small mb-3">Manchester, UK<br>
             Sep. 2021 - June 2023</div>
             <div>
               <li>
-                Culture Shift is a SaaS startup whose main product is an incident reporting app with an in-built analytics engine. As the only data person at Culture Shift, I performed both data engineering and analysis tasks.
+                Culture Shift is a SaaS startup whose main product is an incident reporting app with an in-built analytics engine.
               </li>
               <li>
-                Built and maintained several ETL pipelines synchronising the product (single-page React app) and its database (Postgres) with various vendor tools like Mixpanel, HubSpot, Google Drive, etc. These pipelines ran nightly, or as custom runs triggered by an in-product self-service system. Subjects of analysis included client site performance and product feature usage, as well as Culture Shift’s own KPIs. Analysis results were output as plots (images) stored to Google Drive, Google Spreadsheets, Mixpanel Dashboards, interactive Google Colab notebooks, HubSpot properties/reports, and Slack-based alerts for anomaly detection.
+                Built and maintained numerous ETL pipelines that synchronised the company’s product (single-page React app) and database (Postgres) with various vendor tools like Mixpanel, HubSpot, and Google Drive.
               </li>
               <li>
-                ML project: used techniques to compare client forms and thereby estimate the optimal form structure to attain higher form completion rates.
+                Developed custom data pipelines to analyse client site performance, product feature usage, and company’s own key performance indicators (KPIs).
               </li>
               <li>
+                End-to-end development of a data request system for company use, allowing colleagues to access data from within the app itself.
+              </li>
+			  <li>
+                Statistical anomaly detection, broadcasting such incidents as spikes in reporting rates to Slack for further investigation.
+              </li>
+			  <li>
+                Conducted an R&D project using machine learning techniques to audit the structure of the incident reporting forms and estimate the optimal form structure to attain higher form completion rates.
+              </li>
+			  <li>
+                My data was instrumental in securing contracts with the UK Cabinet Office, prestigious Russell Group universities, and multi-national companies such as EY.
+              </li>
+			  <li>
                 Test-driven development, comprehensive dev. database, type-annotation and linter use, detailed code review, Agile workflow.
+              </li>
+			  <li>
+                <u>Tools:</u> Python, TypeScript (node.js), AWS Lambda/S3/EC2, Gitlab, Docker, SQLAlchemy, Poetry
               </li>
             </div>
           </div>
