--- a/index.html
+++ b/index.html
@@ -200,10 +200,7 @@
                 “Practice school” project with BITS Goa. Part of the Wind Resource Assessment team at NIWE.
               </li>
               <li>
-                Identified potential sites for wind farms using GIS data in the state of Tamil Nadu, meeting government energy policy criteria and NIWE client requirements. Outputs presented as GIS maps; also simulated windflow at said sites.
-              </li>
-              <li>
-                Pipeline: ArcGIS -> AutoCAD -> Solidworks -> OpenFOAM
+                Identified potential sites for wind farms using NIWE-monitored data and GIS data in the state of Tamil Nadu, meeting government energy policy criteria and NIWE client requirements.
               </li>
             </div>
           </div>
@@ -479,7 +476,7 @@
           </form>
           </div>
         </div>
-        <div class="col-md-7 d-print-none" data-aos="zoom-in" data-aos-delay="100"><iframe src="https://www.google.com/maps/embed/v1/place?q=Goa,+India&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8" width="650" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+        <div class="col-md-7 d-print-none" data-aos="zoom-in" data-aos-delay="100"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248849.84916296526!2d77.6309395!3d12.9539974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2sBengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1712568347845!5m2!1sen!2sin" width="650" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
       </div>
     </div>
   </div>
