--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="row">
         <div class="col-md-6">
           <h2 class="h2 fw-light mb-4">About Me</h2>
-          <p>Hello! I’m Aditya Shirodkar, an xperienced data engineer with a strong background in building and maintaining ETL pipelines, data analytics, and machine learning. I also have an interest in generative AI and its applications.</p>
+          <p>Hello! I’m Aditya Shirodkar, an experienced data engineer based in Bangalore, with a strong background in building and maintaining ETL pipelines, data analytics, and machine learning. I also have an interest in generative AI and its applications.</p>
         </div>
         <div class="col-md-5 offset-lg-1">
           <div class="row mt-2">
