--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="header-bio mt-3">
               <div data-aos="zoom-in" data-aos-delay="0">
                 <h2 class="h1">Aditya Shirodkar</h2>
-                <p>Data Scientist</p>
+                <p>Data Engineer</p>
               </div>
               <div class="header-social mb-3 d-print-none" data-aos="zoom-in" data-aos-delay="200">
                 <nav role="navigation">
@@ -144,6 +144,56 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+  <div class="shadow-1-strong bg-white my-5 p-5 d-print-none" id="repositories">
+    <div class="portfolio-section">
+      <h2 class="h2 fw-light mb-4">Repositories</h2>
+      <div class="row g-0">
+        <div class="col-md-6"><a href="https://github.com/aditya-shirodkar/deep-learning" target="_blank"><img class="img-fluid" src="images/machine-learning-1.jpg" width="800" height="500"/></a></div>
+        <div class="col-md-6 d-flex align-items-center" data-aos="fade-left" data-aos-delay="100">
+          <div class="m-4 mt-md-2">
+            <p class="text-teal text-small">Python > Deep learning</p>
+            <h3>PyTorch ML tools</h3>
+            <p class="text-muted">Helpful implementations of basic neural networks, building up towards generative AI.</p>
+          </div>
+        </div>
+      </div>
+	  <div class="row g-0">
+        <div class="col-md-6"><a href="https://github.com/aditya-shirodkar/BasicFinanceConcepts" target="_blank"><img class="img-fluid" src="images/basic-finance-concepts.jpg" width="800" height="500"/></a></div>
+        <div class="col-md-6 d-flex align-items-center" data-aos="fade-left" data-aos-delay="100">
+          <div class="m-4 mt-md-2">
+            <p class="text-teal text-small">Interactive tutorial on basic finance concepts</p>
+            <p class="text-muted">An interactive text-based tutorial to teach some basic finance concepts to children aged 8+.</p>
+          </div>
+        </div>
+      </div>
+      <!--
+      : dendrogram, SVM, naive Bayes, kNN, silhouette plotter, PCA, plotter for classification, Gini calculator, decision tree, logistic regression, priority queue, NLP for language classification
+      -->
+
+    <!--
+      <div class="row g-0 portfolio-reverse">
+        <div class="col-md-6 d-flex align-items-center" data-aos="fade-right" data-aos-delay="100">
+          <div class="m-4 mt-md-2 text-end">
+            <p class="text-teal text-small">Graphic Design / Photoshop / Sketch</p>
+            <h3>Restaurant Website Design</h3>
+            <p class="text-muted">Web design for popular resturant chain involving complex layouts done in both Photoshop and Sketch. Collaborated with back-end and front-end team for finished product.</p>
+          </div>
+        </div>
+        <div class="col-md-6"><a href="https://www.behance.net/" target="_blank"><img class="img-fluid" src="images/project-2.jpg" width="800" height="500"/></a></div>
+      </div>
+      <div class="row g-0">
+        <div class="col-md-6"><a href="https://dribbble.com/" target="_blank"><img class="img-fluid" src="images/project-3.jpg" width="800" height="500"/></a></div>
+        <div class="col-md-6 d-flex align-items-center" data-aos="fade-left" data-aos-delay="100">
+          <div class="m-4 mt-md-2">
+            <p class="text-teal text-small">Frontend / HTML / CSS / JavaScript</p>
+            <h3>E-Commerce Website</h3>
+            <p class="text-muted">Built highly performant website for an E-commerce Portal. Worked with back-end team to timely deliver codebase in HTML, CSS and modern JavaScript.</p>
+          </div>
+        </div>
+      </div>
+    -->
     </div>
   </div>
   <div class="shadow-1-strong bg-white my-5 p-5" id="experience">
@@ -375,47 +425,7 @@
     </div>
   </div>
 
-  <div class="shadow-1-strong bg-white my-5 p-5 d-print-none" id="repositories">
-    <div class="portfolio-section">
-      <h2 class="h2 fw-light mb-4">Repositories</h2>
-      <div class="row g-0">
-        <div class="col-md-6"><a href="https://github.com/aditya-shirodkar/deep-learning" target="_blank"><img class="img-fluid" src="images/machine-learning-1.jpg" width="800" height="500"/></a></div>
-        <div class="col-md-6 d-flex align-items-center" data-aos="fade-left" data-aos-delay="100">
-          <div class="m-4 mt-md-2">
-            <p class="text-teal text-small">Python > Deep learning</p>
-            <h3>PyTorch ML tools</h3>
-            <p class="text-muted">Helpful implementations of basic neural networks, building up towards generative AI.</p>
-          </div>
-        </div>
-      </div>
-      <!--
-      : dendrogram, SVM, naive Bayes, kNN, silhouette plotter, PCA, plotter for classification, Gini calculator, decision tree, logistic regression, priority queue, NLP for language classification
-      -->
-
-    <!--
-      <div class="row g-0 portfolio-reverse">
-        <div class="col-md-6 d-flex align-items-center" data-aos="fade-right" data-aos-delay="100">
-          <div class="m-4 mt-md-2 text-end">
-            <p class="text-teal text-small">Graphic Design / Photoshop / Sketch</p>
-            <h3>Restaurant Website Design</h3>
-            <p class="text-muted">Web design for popular resturant chain involving complex layouts done in both Photoshop and Sketch. Collaborated with back-end and front-end team for finished product.</p>
-          </div>
-        </div>
-        <div class="col-md-6"><a href="https://www.behance.net/" target="_blank"><img class="img-fluid" src="images/project-2.jpg" width="800" height="500"/></a></div>
-      </div>
-      <div class="row g-0">
-        <div class="col-md-6"><a href="https://dribbble.com/" target="_blank"><img class="img-fluid" src="images/project-3.jpg" width="800" height="500"/></a></div>
-        <div class="col-md-6 d-flex align-items-center" data-aos="fade-left" data-aos-delay="100">
-          <div class="m-4 mt-md-2">
-            <p class="text-teal text-small">Frontend / HTML / CSS / JavaScript</p>
-            <h3>E-Commerce Website</h3>
-            <p class="text-muted">Built highly performant website for an E-commerce Portal. Worked with back-end team to timely deliver codebase in HTML, CSS and modern JavaScript.</p>
-          </div>
-        </div>
-      </div>
-    -->
-    </div>
-  </div>
+  
 
 <!--
   <div class="shadow-1-strong bg-white my-5 p-5" id="references">
