--- a/index.html
+++ b/index.html
@@ -389,6 +389,7 @@
           </div>
         </div>
       </div>
+	  <div></div>
 	  <div class="row g-0">
         <div class="col-md-6"><a href="https://github.com/aditya-shirodkar/BasicFinanceConcepts" target="_blank"><img class="img-fluid" src="images/basic-finance-concepts.jpg" width="800" height="500"/></a></div>
         <div class="col-md-6 d-flex align-items-center" data-aos="fade-left" data-aos-delay="100">
