--- a/index.html
+++ b/index.html
@@ -393,6 +393,7 @@
       <div class="row g-0 portfolio-reverse">
         <div class="col-md-6 d-flex align-items-center" data-aos="fade-right" data-aos-delay="100">
           <div class="m-4 mt-md-2 text-end">
+			<p class="text-teal text-small">Python</p>
             <h3>Interactive tutorial on basic finance concepts</h3>
             <p class="text-muted">An interactive text-based tutorial to teach some basic finance concepts to children aged 8+.</p>
           </div>
