--- a/index.html
+++ b/index.html
@@ -384,12 +384,11 @@
           <div class="m-4 mt-md-2 text-end">
 			<p class="text-teal text-small">Python > Generative AI</p>
             <h3>Image to speech story</h3>
-            <p class="text-muted">Creates a speech story from a submitted image.</p>
+            <p class="text-muted">Creates a speech story from a submitted image. Can be run in the browser using streamlit.</p>
           </div>
         </div>
         <div class="col-md-6"><a href="https://github.com/aditya-shirodkar/ImageToSpeechStory" target="_blank"><img class="img-fluid" src="images/image-to-speech-story.jpg" width="800" height="500"/></a></div>
       </div>
-		<br>
       <div class="row g-0">
         <div class="col-md-6"><a href="https://github.com/aditya-shirodkar/deep-learning" target="_blank"><img class="img-fluid" src="images/machine-learning-1.jpg" width="800" height="500"/></a></div>
         <div class="col-md-6 d-flex align-items-center" data-aos="fade-left" data-aos-delay="100">
@@ -400,7 +399,6 @@
           </div>
         </div>
       </div>
-		<br>
       <div class="row g-0 portfolio-reverse">
         <div class="col-md-6 d-flex align-items-center" data-aos="fade-right" data-aos-delay="100">
           <div class="m-4 mt-md-2 text-end">
