added links to streamlit

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
           <div class="m-4 mt-md-2 text-end">
 			<p class="text-teal text-small">Python > Generative AI</p>
             <h3>Article research tool</h3>
-            <p class="text-muted">Allows you to investigate articles provided as their URLs using an LLM. Can be run in a browser using streamlit.</p>
+            <p class="text-muted">Allows you to investigate articles provided as their URLs using an LLM. <a href="https://articleresearchtool.streamlit.app/" target="_blank">Can be run in a browser using streamlit.</a></p>
           </div>
         </div>
         <div class="col-md-6"><a href="https://github.com/aditya-shirodkar/ArticleResearchTool" target="_blank"><img class="img-fluid" src="images/article-research-tool.jpg" width="800" height="500"/></a></div>
@@ -395,7 +395,7 @@
           <div class="m-4 mt-md-2">
             <p class="text-teal text-small">Python > Generative AI</p>
             <h3>Restaurant idea generator</h3>
-            <p class="text-muted">Creates a restaurant name and menu items from the provided cuisine. Can be run in a browser using streamlit.</p>
+            <p class="text-muted">Creates a restaurant name and menu items from the provided cuisine. <a href="https://cuisinemenugenerator.streamlit.app/" target="_blank">Can be run in a browser using streamlit.</a></p>
           </div>
         </div>
       </div>
@@ -404,7 +404,7 @@
           <div class="m-4 mt-md-2 text-end">
 			<p class="text-teal text-small">Python > Generative AI</p>
             <h3>Image to speech story</h3>
-            <p class="text-muted">Creates a speech story from a submitted image. Can be run in a browser using streamlit.</p>
+            <p class="text-muted">Creates a speech story from a submitted image. <a href="https://imagetoaudiostory.streamlit.app/" target="_blank">Can be run in a browser using streamlit.</a></p>
           </div>
         </div>
         <div class="col-md-6"><a href="https://github.com/aditya-shirodkar/ImageToSpeechStory" target="_blank"><img class="img-fluid" src="images/image-to-speech-story.jpg" width="800" height="500"/></a></div>
